--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7916,6 +7916,11 @@ input::-ms-input-placeholder { /* Microsoft Edge */
   justify-content: space-between;
 }
 
+.marketMakingBoxEcosystem{
+  display: flex;
+  justify-content: space-between;
+}
+
 .marketMakingInnerBox{
   border: 1.52px solid #FFFFFF4A;
   width: 32%;
@@ -8097,6 +8102,13 @@ input::-ms-input-placeholder { /* Microsoft Edge */
     color: black;
  }
 
+ .webView{
+  display: block;
+ }
+ .mblView{
+  display: none;
+ }
+
 /* On screens that are 1460px or less, set the background color to olive */
 @media screen and (max-width: 1460px) {
   .learn_section {
@@ -8107,12 +8119,25 @@ input::-ms-input-placeholder { /* Microsoft Edge */
 /* On screens that are 992px or less, set the background color to olive */
 @media screen and (max-width: 992px) {
 
+  .webView{
+    display: none;
+  }
+
+  .mblView{
+    display: block;
+   }
+
   .contct_btn{
     font-size: 28px;
     padding-bottom: 15px;
   }
   
   .marketMakingBox{
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .marketMakingBoxEcosystem{
     flex-wrap: wrap;
     justify-content: end;
   }
